--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,20 @@
+.holder {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    gap: 10px;
+}
 
+.item {
+    width: 100px;
+    height: 50px;
+    background-color: red;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-weight: bold;
+}
 /* Your CSS Code here. */
